<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.johnhite.crypto</groupId>
	<artifactId>crypto-lib</artifactId>
	<version>0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>Crypto Lib</name>

	<scm>
		<connection>scm:git:git@github.com:aikidojohn/crypto.git</connection>
		<url>scm:git:git@github.com:aikidojohn/crypto.git</url>
		<developerConnection>scm:git:git@github.com:aikidojohn/crypto.git</developerConnection>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<bouncycastle.version>1.51</bouncycastle.version>
		<commons-codec.version>1.10</commons-codec.version>
		<slf4j.version>1.7.9</slf4j.version>
		<logback.version>1.0.13</logback.version>
		<junit.version>4.12</junit.version>
		<mockito.version>1.10.8</mockito.version>
		<equalsverifier.version>1.5.1</equalsverifier.version>
	</properties>

	<repositories>
		<repository>
			<id>version99</id>
			<!-- highly available repository serving empty artifacts -->
			<url>http://version99.qos.ch/</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- Apache Commons Codec -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>${commons-codec.version}</version>
		</dependency>

		<!-- Bouncy Castle -->
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk15on</artifactId>
			<version>${bouncycastle.version}</version>
		</dependency>

		<!-- Logging dependencies -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
			<scope>runtime</scope>
		</dependency>

		<!-- Testing Dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>nl.jqno.equalsverifier</groupId>
			<artifactId>equalsverifier</artifactId>
			<version>${equalsverifier.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<!-- Configure Checkstyle defaults -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>2.13</version>
					<dependencies>
						<dependency>
							<groupId>com.puppycrawl.tools</groupId>
							<artifactId>checkstyle</artifactId>
							<version>8.29</version>
						</dependency>
					</dependencies>
					<executions>
						<execution>
							<id>validate</id>
							<phase>validate</phase>
							<configuration>
								<configLocation>checkstyle.xml</configLocation>
								<encoding>UTF-8</encoding>
								<consoleOutput>false</consoleOutput>
								<failsOnError>true</failsOnError>
								<failOnViolation>true</failOnViolation>
								<linkXRef>false</linkXRef>
								<includeTestSourceDirectory>true</includeTestSourceDirectory>
							</configuration>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-checkstyle-plugin</artifactId>
										<versionRange>[2.13,)</versionRange>
										<goals>
											<goal>check</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<!-- plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
				<configuration> <argLine>-Xmx1024m</argLine> </configuration> </plugin> <plugin> 
				<groupId>org.apache.maven.plugins</groupId> <artifactId>maven-release-plugin</artifactId> 
				<version>2.5</version> <dependencies> <dependency> <groupId>org.apache.maven.plugins</groupId> 
				<artifactId>maven-scm-plugin</artifactId> <version>1.9</version> </dependency> 
				</dependencies> <configuration> <autoVersionSubmodules>true</autoVersionSubmodules> 
				<mavenExecutorId>forked-path</mavenExecutorId> <tagNameFormat>v@{project.version}</tagNameFormat> 
				<preparationGoals>clean test</preparationGoals> </configuration> </plugin -->



			<!-- Checkstyle plugin <plugin> <groupId>org.apache.maven.plugins</groupId> 
				<artifactId>maven-checkstyle-plugin</artifactId> </plugin> -->
		</plugins>
	</build>
</project>
